changed the elections counties to not have extra commas\! what a dumb problem\!

--- a/notebooks/Unauthorized_population.ipynb
+++ b/notebooks/Unauthorized_population.ipynb
@@ -3652,7 +3652,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -6954,8 +6956,22 @@
     "                        'Hunterdon County', 'Middlesex County', 'Monmouth County',\n",
     "                        'Morriw County', 'Ocean County', 'Passaic County', 'Somerset County',\n",
     "                        'Sussex County','Warren County']\n",
-    "county_19_dict['NY'] = ['Albany, County','Cortland, County','Dutchess, County','Fulton, County','Greene, County','Herkimer, County','Lewis, County','Orleans, County','Rensselaer, County','Rockland, County','Seneca, County','St. Lawrence, County','Sullivan, County','Tioga, County','Warren, County','Washington, County','Yates County']\n",
-    "county_19_dict['PA'] = ['Beaver, County','Bedford, County','Berks, County','Bradford, County','Carbon, County','Centre, County','Chester, County','Clinton, County','Crawford, County','Dauphin, County','Elk, County','Fayette, County','Franklin, County','Fulton, County','Indiana, County','Jefferson, County','Lancaster, County','Lehigh, County','Luzerne, County','Mercer, County','Monroe, County','Montgomery, County','Montour, County','Northampton, County','Northumberland, County','Philadelphia, County','Potter, County','Snyder, County','Somerset, County','Sullivan, County','Warren, County','Wayne, County','Westmoreland, County','Wyoming, County','York County']\n",
+    "county_19_dict['NY'] = ['Albany County','Cortland County','Dutchess County','Fulton County',\n",
+    "                        'Greene County','Herkimer County','Lewis County','Orleans County',\n",
+    "                        'Rensselaer County','Rockland County','Seneca County',\n",
+    "                        'St. Lawrence County','Sullivan County','Tioga County',\n",
+    "                        'Warren County','Washington County','Yates County']\n",
+    "county_19_dict['PA'] = ['Beaver County','Bedford County','Berks County','Bradford County',\n",
+    "                        'Carbon County','Centre County','Chester County','Clinton County',\n",
+    "                        'Crawford County','Dauphin County','Elk County','Fayette County',\n",
+    "                        'Franklin County','Fulton County','Indiana County',\n",
+    "                        'Jefferson County','Lancaster County','Lehigh County',\n",
+    "                        'Luzerne County','Mercer County','Monroe County',\n",
+    "                        'Montgomery County','Montour County','Northampton County',\n",
+    "                        'Northumberland County','Philadelphia County',\n",
+    "                        'Potter County','Snyder County','Somerset County',\n",
+    "                        'Sullivan County','Warren County','Wayne County','Westmoreland County',\n",
+    "                        'Wyoming County','York County']\n",
     "county_19_dict['VA'] = list(statecountyimm.County[statecountyimm.State_init =='VA'])\n",
     "county_19_dict['WA'] = ['Snohomish County','Whatcom County']"
    ]
@@ -7234,78 +7250,6 @@
     "    return df\n",
     "\n",
     "get_19_stateimm(statecountyimm,county_19_dict).head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        State State_init countyname fips_countyname_county  clinton   trump  \\\n",
-      "2313  Florida         FL  Duval, FL           Duval County   205704  211672   \n",
-      "\n",
-      "      total_votes        County  total_detained  ICE_custody  No_ICE_custody  \\\n",
-      "2313       436573  Duval County            2511       1920.0           591.0   \n",
-      "\n",
-      "       pct_ice  pct_clinton  dem_votes_per_custody  dem_excess_per_custody  \\\n",
-      "2313  0.764636     0.471179               107.1375               -3.108333   \n",
-      "\n",
-      "         test  \n",
-      "2313  0.36028  \n",
-      "           State State_init  countyname fips_countyname_county  clinton  \\\n",
-      "5690  New Jersey         NJ  Bergen, NJ          Bergen County   231211   \n",
-      "\n",
-      "       trump  total_votes         County  total_detained  ICE_custody  \\\n",
-      "5690  175529       422213  Bergen County            1957       1369.0   \n",
-      "\n",
-      "      No_ICE_custody  pct_ice  pct_clinton  dem_votes_per_custody  \\\n",
-      "5690           588.0  0.69954     0.547617             168.890431   \n",
-      "\n",
-      "      dem_excess_per_custody     test  \n",
-      "5690               40.673484  0.38308  \n",
-      "           State State_init      countyname fips_countyname_county  clinton  \\\n",
-      "5703  New Jersey         NJ  Burlington, NJ      Burlington County   121725   \n",
-      "\n",
-      "      trump  total_votes             County  total_detained  ICE_custody  \\\n",
-      "5703  89272       221283  Burlington County            2567       1274.0   \n",
-      "\n",
-      "      No_ICE_custody   pct_ice  pct_clinton  dem_votes_per_custody  \\\n",
-      "5703          1293.0  0.496299     0.550087              95.545526   \n",
-      "\n",
-      "      dem_excess_per_custody      test  \n",
-      "5703               25.473312  0.273008  \n",
-      "           State State_init  countyname fips_countyname_county  clinton  \\\n",
-      "5781  New Jersey         NJ  Hudson, NJ          Hudson County   163917   \n",
-      "\n",
-      "      trump  total_votes         County  total_detained  ICE_custody  \\\n",
-      "5781  49043       220542  Hudson County            3000       1959.0   \n",
-      "\n",
-      "      No_ICE_custody  pct_ice  pct_clinton  dem_votes_per_custody  \\\n",
-      "5781          1041.0    0.653     0.743246              83.673813   \n",
-      "\n",
-      "      dem_excess_per_custody     test  \n",
-      "5781               58.639102  0.48534  \n",
-      "           State State_init     countyname fips_countyname_county  clinton  \\\n",
-      "5794  New Jersey         NJ  Hunterdon, NJ       Hunterdon County    28898   \n",
-      "\n",
-      "      trump  total_votes            County  total_detained  ICE_custody  \\\n",
-      "5794  38712        71660  Hunterdon County             566        389.0   \n",
-      "\n",
-      "      No_ICE_custody   pct_ice  pct_clinton  dem_votes_per_custody  \\\n",
-      "5794           177.0  0.687279     0.403265              74.287918   \n",
-      "\n",
-      "      dem_excess_per_custody      test  \n",
-      "5794              -25.228792  0.277156  \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in tups[:5]:\n",
-    "    print(statecountyimm[(statecountyimm.State_init==i[0])&(statecountyimm.County==i[1])])"
    ]
   },
   {
